# quasseltui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/quasseltui/: __init__.py  __main__.py  cli.py  config.py
src/quasseltui/app/: __init__.py  app.py  bridge.py  demo_data.py  messages.py  styles.tcss
src/quasseltui/app/screens/: __init__.py  chat.py
src/quasseltui/app/widgets/: __init__.py  buffer_tree.py  input_bar.py  message_log.py
src/quasseltui/client/: __init__.py  client.py  events.py  state.py
src/quasseltui/protocol/: __init__.py  connection.py  enums.py  errors.py  framing.py  handshake.py  messages.py  probe.py  signalproxy.py  transport.py  usertypes.py
src/quasseltui/qt/: __init__.py  datastream.py  types.py  usertypes.py  variant.py
src/quasseltui/sync/: __init__.py  backlog_manager.py  base.py  buffer_syncer.py  dispatcher.py  events.py  identity.py  irc_channel.py  irc_user.py  network.py
src/quasseltui/util/: __init__.py  text.py
tests/: test_smoke.py
tests/tools/: capture_session.py
tests/unit/: test_cli.py  test_config.py
tests/unit/app/: test_app_bridge.py  test_bridge.py  test_chat_screen.py  test_demo_data.py  test_widgets.py
tests/unit/client/: test_client.py  test_state.py
tests/unit/protocol/: test_connection.py  test_enums.py  test_framing.py  test_handshake.py  test_probe.py  test_signalproxy.py  test_transport.py  test_usertypes.py
tests/unit/qt/: test_datastream.py  test_variant.py
tests/unit/sync/: test_base.py  test_dispatcher.py  test_syncables.py
tests/unit/util/: test_text.py
