[project]
name = "quasseltui"
version = "0.0.0"
description = "Terminal client for Quassel IRC cores"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sean Reifschneider", email = "jafo00@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "textual>=0.60",
]

[project.scripts]
quasseltui = "quasseltui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quasseltui"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/quasseltui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live Quassel core (set QUASSEL_CORE_URL)",
]

[tool.importlinter]
root_packages = ["quasseltui"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "quasseltui.app",
    "quasseltui.client",
    "quasseltui.sync",
    "quasseltui.protocol",
    "quasseltui.qt",
]

[[tool.importlinter.contracts]]
name = "Lower layers do not import textual"
type = "forbidden"
source_modules = [
    "quasseltui.qt",
    "quasseltui.protocol",
    "quasseltui.sync",
    "quasseltui.client",
]
forbidden_modules = ["textual"]
